tools/tests/errors/random_choices_negative_k.ki
var random = import("random")
var r = random.Random(1)
discard r.choices([1, 2, 3], k = -1)
